samples/_failures_safe/1761253971_65a74e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54912a9a.c: In function ‘main’:
./samples/SAFE/__tmp_54912a9a.c:163:5: error: expected declaration or statement at end of input
  163 |     }
      |     ^
